delphi/lekce45/GL.pas


var
  glAccum: procedure(op: GLenum; value: GLfloat); stdcall;
  glAlphaFunc: procedure(func: GLenum; ref: GLclampf); stdcall;
  glAreTexturesResident: function (n: GLsizei; const textures: PGLuint; residences: PGLboolean): GLboolean; stdcall;
  glArrayElement: procedure(i: GLint); stdcall;
  glBegin: procedure(mode: GLenum); stdcall;
  glBindTexture: procedure(target: GLenum; texture: GLuint); stdcall;
  glBitmap: procedure (width, height: GLsizei; xorig, yorig: GLfloat; xmove, ymove: GLfloat; const bitmap: PGLubyte); stdcall;
  glBlendFunc: procedure(sfactor, dfactor: GLenum); stdcall;
  glCallList: procedure(list: GLuint); stdcall;
  glCallLists: procedure(n: GLsizei; atype: GLenum; const lists: Pointer); stdcall;
  glClear: procedure(mask: GLbitfield); stdcall;
  glClearAccum: procedure(red, green, blue, alpha: GLfloat); stdcall;
  glClearColor: procedure(red, green, blue, alpha: GLclampf); stdcall;
  glClearDepth: procedure(depth: GLclampd); stdcall;
  glClearIndex: procedure(c: GLfloat); stdcall;
  glClearStencil: procedure(s: GLint); stdcall;
  glClipPlane: procedure(plane: GLenum; const equation: PGLdouble); stdcall;
  glColor3b: procedure(red, green, blue: GLbyte); stdcall;
  glColor3bv: procedure(const v: PGLbyte); stdcall;
  glColor3d: procedure(red, green, blue: GLdouble); stdcall;
  glColor3dv: procedure(const v: PGLdouble); stdcall;
  glColor3f: procedure(red, green, blue: GLfloat); stdcall;
  glColor3fv: procedure(const v: PGLfloat); stdcall;
  glColor3i: procedure(red, green, blue: GLint); stdcall;
  glColor3iv: procedure(const v: PGLint); stdcall;
  glColor3s: procedure(red, green, blue: GLshort); stdcall;
  glColor3sv: procedure(const v: PGLshort); stdcall;
  glColor3ub: procedure(red, green, blue: GLubyte); stdcall;
  glColor3ubv: procedure(const v: PGLubyte); stdcall;
  glColor3ui: procedure(red, green, blue: GLuint); stdcall;
  glColor3uiv: procedure(const v: PGLuint); stdcall;
  glColor3us: procedure(red, green, blue: GLushort); stdcall;
  glColor3usv: procedure(const v: PGLushort); stdcall;
  glColor4b: procedure(red, green, blue, alpha: GLbyte); stdcall;
  glColor4bv: procedure(const v: PGLbyte); stdcall;
  glColor4d: procedure(red, green, blue, alpha: GLdouble); stdcall;
  glColor4dv: procedure(const v: PGLdouble); stdcall;
  glColor4f: procedure(red, green, blue, alpha: GLfloat); stdcall;
  glColor4fv: procedure(const v: PGLfloat); stdcall;
  glColor4i: procedure(red, green, blue, alpha: GLint); stdcall;
  glColor4iv: procedure(const v: PGLint); stdcall;
  glColor4s: procedure(red, green, blue, alpha: GLshort); stdcall;
  glColor4sv: procedure(const v: PGLshort); stdcall;
  glColor4ub: procedure(red, green, blue, alpha: GLubyte); stdcall;
  glColor4ubv: procedure(const v: PGLubyte); stdcall;
  glColor4ui: procedure(red, green, blue, alpha: GLuint); stdcall;
  glColor4uiv: procedure(const v: PGLuint); stdcall;
  glColor4us: procedure(red, green, blue, alpha: GLushort); stdcall;
  glColor4usv: procedure(const v: PGLushort); stdcall;
  glColorMask: procedure(red, green, blue, alpha: GLboolean); stdcall;
  glColorMaterial: procedure(face, mode: GLenum); stdcall;
  glColorPointer: procedure(size: GLint; atype: GLenum; stride: GLsizei; const pointer: Pointer); stdcall;
  glCopyPixels: procedure(x, y: GLint; width, height: GLsizei; atype: GLenum); stdcall;
  glCopyTexImage1D: procedure (target: GLenum; level: GLint; internalFormat: GLenum; x, y: GLint; width: GLsizei; border: GLint); stdcall;
  glCopyTexImage2D: procedure(target: GLenum; level: GLint; internalFormat: GLenum; x, y: GLint; width, height: GLsizei; border: GLint); stdcall;
  glCopyTexSubImage1D: procedure(target: GLenum; level, xoffset, x, y: GLint; width: GLsizei); stdcall;
  glCopyTexSubImage2D: procedure(target: GLenum; level, xoffset, yoffset, x, y: GLint; width, height: GLsizei); stdcall;
  glCullFace: procedure(mode: GLenum); stdcall;
  glDeleteLists: procedure(list: GLuint; range: GLsizei); stdcall;
  glDeleteTextures: procedure(n: GLsizei; const textures: PGLuint); stdcall;
  glDepthFunc: procedure(func: GLenum); stdcall;
  glDepthMask: procedure(flag: GLboolean); stdcall;
  glDepthRange: procedure(zNear, zFar: GLclampd); stdcall;
  glDisable: procedure(cap: GLenum); stdcall;
  glDisableClientState: procedure(aarray: GLenum); stdcall;
  glDrawArrays: procedure(mode: GLenum; first: GLint; count: GLsizei); stdcall;
  glDrawBuffer: procedure(mode: GLenum); stdcall;
  glDrawElements: procedure(mode: GLenum; count: GLsizei; atype: GLenum; const indices: Pointer); stdcall;
  glDrawPixels: procedure(width, height: GLsizei; format, atype: GLenum; const pixels: Pointer); stdcall;
  glEdgeFlag: procedure(flag: GLboolean); stdcall;
  glEdgeFlagPointer: procedure(stride: GLsizei; const pointer: Pointer); stdcall;
  glEdgeFlagv: procedure(const flag: PGLboolean); stdcall;
  glEnable: procedure(cap: GLenum); stdcall;
  glEnableClientState: procedure(aarray: GLenum); stdcall;
  glEnd: procedure; stdcall;
  glEndList: procedure; stdcall;
  glEvalCoord1d: procedure(u: GLdouble); stdcall;
  glEvalCoord1dv: procedure(const u: PGLdouble); stdcall;
  glEvalCoord1f: procedure(u: GLfloat); stdcall;
  glEvalCoord1fv: procedure(const u: PGLfloat); stdcall;
  glEvalCoord2d: procedure(u, v: GLdouble); stdcall;
  glEvalCoord2dv: procedure(const u: PGLdouble); stdcall;
  glEvalCoord2f: procedure(u, v: GLfloat); stdcall;
  glEvalCoord2fv: procedure(const u: PGLfloat); stdcall;
  glEvalMesh1: procedure(mode: GLenum; i1, i2: GLint); stdcall;
  glEvalMesh2: procedure(mode: GLenum; i1, i2, j1, j2: GLint); stdcall;
  glEvalPoint1: procedure(i: GLint); stdcall;
  glEvalPoint2: procedure(i, j: GLint); stdcall;
  glFeedbackBuffer: procedure(size: GLsizei; atype: GLenum; buffer: PGLfloat); stdcall;
  glFinish: procedure; stdcall;
  glFlush: procedure; stdcall;
  glFogf: procedure(pname: GLenum; param: GLfloat); stdcall;
  glFogfv: procedure(pname: GLenum; const params: PGLfloat); stdcall;
  glFogi: procedure(pname: GLenum; param: GLint); stdcall;
  glFogiv: procedure(pname: GLenum; const params: PGLint); stdcall;
  glFrontFace: procedure(mode: GLenum); stdcall;
  glFrustum: procedure(left, right, bottom, top, zNear, zFar: GLdouble); stdcall;
  glGenLists: function(range: GLsizei): GLuint; stdcall;
  glGenTextures: procedure(n: GLsizei; textures: PGLuint); stdcall;
  glGetBooleanv: procedure(pname: GLenum; params: PGLboolean); stdcall;
  glGetClipPlane: procedure(plane: GLenum; equation: PGLdouble); stdcall;
  glGetDoublev: procedure(pname: GLenum; params: PGLdouble); stdcall;
  glGetError: function: GLenum; stdcall;
  glGetFloatv: procedure(pname: GLenum; params: PGLfloat); stdcall;
  glGetIntegerv: procedure(pname: GLenum; params: PGLint); stdcall;
  glGetLightfv: procedure(light, pname: GLenum; params: PGLfloat); stdcall;
  glGetLightiv: procedure(light, pname: GLenum; params: PGLint); stdcall;
  glGetMapdv: procedure(target, query: GLenum; v: PGLdouble); stdcall;
  glGetMapfv: procedure(target, query: GLenum; v: PGLfloat); stdcall;
  glGetMapiv: procedure(target, query: GLenum; v: GLint); stdcall;
  glGetMaterialfv: procedure(face, pname: GLenum; params: PGLfloat); stdcall;
  glGetMaterialiv: procedure(face, pname: GLenum; params: GLint); stdcall;
  glGetPixelMapfv: procedure(map: GLenum; values: PGLfloat); stdcall;
  glGetPixelMapuiv: procedure(map: GLenum; values: PGLuint); stdcall;
  glGetPixelMapusv: procedure(map: GLenum; values: PGLushort); stdcall;
  glGetPointerv: procedure(pname: GLenum; params: Pointer); stdcall;
  glGetPolygonStipple: procedure(mask: PGLubyte); stdcall;
  glGetString: function(name: GLenum): PGLubyte; stdcall;
  glGetTexEnvfv: procedure(target, pname: GLenum; params: PGLfloat); stdcall;
  glGetTexEnviv: procedure(target, pname: GLenum; params: PGLint); stdcall;
  glGetTexGendv: procedure(coord, pname: GLenum; params: PGLdouble); stdcall;
  glGetTexGenfv: procedure(coord, pname: GLenum; params: PGLfloat); stdcall;
  glGetTexGeniv: procedure(coord, pname: GLenum; params: PGLint); stdcall;
  glGetTexImage: procedure(target: GLenum; level: GLint; format: GLenum; atype: GLenum; pixels: Pointer); stdcall;
  glGetTexLevelParameterfv: procedure(target: GLenum; level: GLint; pname: GLenum; params: Pointer); stdcall;
  glGetTexLevelParameteriv: procedure(target: GLenum; level: GLint; pname: GLenum; params: PGLint); stdcall;
  glGetTexParameterfv: procedure(target, pname: GLenum; params: PGLfloat); stdcall;
  glGetTexParameteriv: procedure(target, pname: GLenum; params: PGLint); stdcall;
  glHint: procedure(target, mode: GLenum); stdcall;
  glIndexMask: procedure(mask: GLuint); stdcall;
  glIndexPointer: procedure(atype: GLenum; stride: GLsizei; const pointer: Pointer); stdcall;
  glIndexd: procedure(c: GLdouble); stdcall;
  glIndexdv: procedure(const c: PGLdouble); stdcall;
  glIndexf: procedure(c: GLfloat); stdcall;
  glIndexfv: procedure(const c: PGLfloat); stdcall;
  glIndexi: procedure(c: GLint); stdcall;
  glIndexiv: procedure(const c: PGLint); stdcall;
  glIndexs: procedure(c: GLshort); stdcall;
  glIndexsv: procedure(const c: PGLshort); stdcall;
  glIndexub: procedure(c: GLubyte); stdcall;
  glIndexubv: procedure(const c: PGLubyte); stdcall;
  glInitNames: procedure; stdcall;
  glInterleavedArrays: procedure(format: GLenum; stride: GLsizei; const pointer: Pointer); stdcall;
  glIsEnabled: function(cap: GLenum): GLboolean; stdcall;
  glIsList: function(list: GLuint): GLboolean; stdcall;
  glIsTexture: function(texture: GLuint): GLboolean; stdcall;
  glLightModelf: procedure(pname: GLenum; param: GLfloat); stdcall;
  glLightModelfv: procedure(pname: GLenum; const params: PGLfloat); stdcall;
  glLightModeli: procedure(pname: GLenum; param: GLint); stdcall;
  glLightModeliv: procedure(pname: GLenum; const params: PGLint); stdcall;
  glLightf: procedure(light, pname: GLenum; param: GLfloat); stdcall;
  glLightfv: procedure(light, pname: GLenum; const params: PGLfloat); stdcall;
  glLighti: procedure(light, pname: GLenum; param: GLint); stdcall;
  glLightiv: procedure(light, pname: GLenum; const params: GLint); stdcall;
  glLineStipple: procedure(factor: GLint; pattern: GLushort); stdcall;
  glLineWidth: procedure(width: GLfloat); stdcall;
  glListBase: procedure(base: GLuint); stdcall;
  glLoadIdentity: procedure; stdcall;
  glLoadMatrixd: procedure(const m: PGLdouble); stdcall;
  glLoadMatrixf: procedure(const m: PGLfloat); stdcall;
  glLoadName: procedure(name: GLuint); stdcall;
  glLogicOp: procedure(opcode: GLenum); stdcall;
  glMap1d: procedure(target: GLenum; u1, u2: GLdouble; stride, order: GLint; const points: PGLdouble); stdcall;
  glMap1f: procedure(target: GLenum; u1, u2: GLfloat; stride, order: GLint; const points: PGLfloat); stdcall;
  glMap2d: procedure(target: GLenum; u1, u2: GLdouble; ustride, uorder: GLint; v1, v2: GLdouble; vstride, vorder: GLint; const points: PGLdouble); stdcall;
  glMap2f: procedure(target: GLenum; u1, u2: GLfloat; ustride, uorder: GLint; v1, v2: GLfloat; vstride, vorder: GLint; const points: PGLfloat); stdcall;
  glMapGrid1d: procedure(un: GLint; u1, u2: GLdouble); stdcall;
  glMapGrid1f: procedure(un: GLint; u1, u2: GLfloat); stdcall;
  glMapGrid2d: procedure(un: GLint; u1, u2: GLdouble; vn: GLint; v1, v2: GLdouble); stdcall;
  glMapGrid2f: procedure(un: GLint; u1, u2: GLfloat; vn: GLint; v1, v2: GLfloat); stdcall;
  glMaterialf: procedure(face, pname: GLenum; param: GLfloat); stdcall;
  glMaterialfv: procedure(face, pname: GLenum; const params: PGLfloat); stdcall;
  glMateriali: procedure(face, pname: GLenum; param: GLint); stdcall;
  glMaterialiv: procedure(face, pname: GLenum; const params: PGLint); stdcall;
  glMatrixMode: procedure(mode: GLenum); stdcall;
  glMultMatrixd: procedure(const m: PGLdouble); stdcall;
  glMultMatrixf: procedure(const m: PGLfloat); stdcall;
  glNewList: procedure(list: GLuint; mode: GLenum); stdcall;
  glNormal3b: procedure(nx, ny, nz: GLbyte); stdcall;
  glNormal3bv: procedure(const v: PGLbyte); stdcall;
